@@ -3,6 +3,8 @@ v0.1.8
 	* Various details have been modified since the official language
 	  documentation has been published.
 	* Better handling of collector conditions.
+	* Solves bug with interpolable strings that are not resolved when first
+	  found.
   New features
 	* Amending attributes with a collector.
 	* Stdlib functions : chomp
